# crack-features

./: LICENSE.txt  README.md  crop.py  full_crack_analysis.py  pyproject.toml  requirements.txt
config/: cracks_config.json  phases_config.json
cracks/: __init__.py  branches.py  detection.py  features.py
cracks/derivates/: __init__.py  bw_morph.py
notebooks/: 01_ozarene_kamenivo-trhliny.ipynb  02_batch_F_serie.ipynb
notebooks/beton-hlavac/: 01_manual-labeling-evaluation.ipynb
notebooks/paper-images/: 01_neighbors.ipynb
output_generator/: __init__.py
phase_map/: __init__.py  __main__.py  cleanup.py  crop.py  grains.py
prochazka/: BatchRun.m  E10-phases_x6.mat  MainCaller.m  README.md  batchPhase.m  batch_run.py  bw_morph.py  crackID.m  crack_id.py  cracksCount.m  cracksEval.m  cracks_count.py  cracks_eval.py  grainFilter.m  grainID2.m  grainParam.m  grain_filter.py  grain_id.py  grain_param.py  log_image.py  main_caller.py  phaseID.m  phaseTHR.m  phase_id.py  phase_thr.py  weightcounts.m
utils/: __init__.py  cli_arguments.py  config_loader.py  image_logger.py  output_dir_generator.py
