[tool.poetry]
name = "microscopy"
version = "0.1.0"
description = "Tools for processing microscopy images"
authors = ["Honza Blažek <gimli@matfyz.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
